<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.buging.graffcity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/registro_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_register_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/register_nombre" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/registro_nombre"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/register_apellido" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/registro_apellido"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/register_nickName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/registro_nickName"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/register_email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/registro_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/register_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/registro_password"
                android:imeActionId="@+id/register_button"
                android:imeActionLabel="@string/action_registro_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/register_con_password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/registro_con_password"
                    android:imeActionId="@+id/register_button"
                    android:imeActionLabel="@string/action_registro_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:backgroundTint="#222222"
                android:textColor="@color/common_signin_btn_dark_text_default"
                android:layout_width="120dp" android:layout_height="wrap_content"
                android:layout_marginTop="20dp" android:text="@string/action_register"
                android:textStyle="bold"
                android:textSize="20dp"
                android:onClick="button_registro"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
